--- a/bibliotecaJava/nbproject/project.properties
+++ b/bibliotecaJava/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/bibliotecaJava
 excludes=
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\B09S105est\\Downloads\\mysql-connector-j-8.4.0\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-j-8.4.0.jar-1=C:\\Users\\B09S105est\\Documents\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.4.0.jar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}:\
+    ${file.reference.mysql-connector-j-8.4.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
